# gin

./: .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  Makevars  README.md  SConstruct  install_gin.sh
include/gin/: globals.h  settings.h  shake.h
include/gin/feature_selection/: feature_selector.h  scones.h  shake.h
include/gin/gwas/: CFastANOVA.h  CGWASData.h  CMetaGWAS.h  CScones.h  CSingleTraitGWAS.h
include/gin/io/: CGWASDataIO.h  CIOProgress.h  CLogging.h  CPlinkParser.h  CSconesIO.h  grid_views.h
include/gin/meta/: CEffectSize.h  CMetaAnalysis.h
include/gin/model_selection/: CCrossValidation.h  grid.h  grid_cv.h
include/gin/optimizer/: CRootFinding.h
include/gin/regression/: CRegression.h
include/gin/stats/: CBeta.h  CChi2.h  CFisherF.h  CGamma.h  CGaussian.h  CHSIC.h  CStats.h  CStudentT.h  univariate_association.h
include/gin/utils/: CCrossValidation.h  CKernels.h  CMathHelper.h  CMatrixHelper.h  CMisc.h  StringHelper.h  random.h  utils.h
include/gwas/: CFastANOVA.h  CGWASData.h  CMetaGWAS.h  CScones.h  CSingleTraitGWAS.h
include/io/: CGWASDataIO.h  CIOProgress.h  CLogging.h  CPlinkParser.h  CSconesIO.h
include/kernel/: CKernels.h
include/meta/: CEffectSize.h  CMetaAnalysis.h
include/optimizer/: CRootFinding.h
include/regression/: CRegression.h
include/stats/: CBeta.h  CChi2.h  CFisherF.h  CGamma.h  CGaussian.h  CHSIC.h  CStats.h  CStudentT.h
include/utils/: CCrossValidation.h  CMathHelper.h  CMatrixHelper.h  CMisc.h  StringHelper.h
lib/: CMakeLists.txt
lib/Cephes/: CMakeLists.txt  Makefile  cmake_install.cmake
lib/maxflow/: CMakeLists.txt  maxflow.cpp
src/: CMakeLists.txt  shake.cc
src/CEasyGWAS/: globals.h
src/CEasyGWAS/gwas/: CGWASData.cc  CScones.cc  CScones.h
src/CEasyGWAS/io/: CPlinkParser.h  CSconesIO.cc  CSconesIO.h
src/CEasyGWAS/regression/: CRegression.cc
src/CEasyGWAS/stats/: CChi2.cc  CChi2.h
src/CEasyGWAS/utils/: CMatrixHelper.h
src/association/: univariate_association.cc
src/feature_selection/: feature_selector.cc  scones.cc  shake.cc
src/gwas/: CFastANOVA.cc  CGWASData.cc  CMetaGWAS.cc  CScones.cc  CSingleTraitGWAS.cc
src/interfaces/python/CEasyGWAS/: CEasyGWAS.i  eigen.i
src/interfaces/python/CEasyGWAS/gwas/: CGWASData.i  CMetaGWAS.i  CSingleTraitGWAS.i
src/interfaces/python/CEasyGWAS/kernel/: CKernels.i
src/interfaces/python/CEasyGWAS/meta/: CEffectSize.i  CMetaAnalysis.i
src/interfaces/python/CEasyGWAS/regression/: CRegression.i
src/interfaces/python/CEasyGWAS/stats/: CBeta.i  CChi2.i  CFisherF.i  CGamma.i  CGaussian.i  CHSIC.i  CStats.i  CStudentT.i
src/io/: CGWASDataIO.cc  CIOProgress.cc  CLogging.cc  CPlinkParser.cc  CSconesIO.cc  grid_views.cc
src/kernel/: CKernels.cc
src/meta/: CEffectSize.cc  CMetaAnalysis.cc
src/model_selection/: CCrossValidation.cc  grid.cc  grid_cv.cc
src/optimizer/: CRootFinding.cc
src/regression/: CRegression.cc
src/stats/: CBeta.cc  CChi2.cc  CFisherF.cc  CGamma.cc  CGaussian.cc  CHSIC.cc  CStats.cc  CStudentT.cc  univariate_association.cc
src/tools/: CMakeLists.txt  SConscript  emmax.cc  evo.cc  fastlmm.cc  filter_snps.cc  gin.cc  linreg.cc  random_effect_meta_analysis.cc  scones.cc  scones2.cc  shake.cc
src/utils/: CCrossValidation.cc  CKernels.cc  CMisc.cc  CRootFinding.cc  StringHelper.cc  random.cc  utils.cc
test/: CMakeLists.txt
test/data/case2/: gene2snp.tsv  genotypes.map  genotypes.ped  network.txt  ppi.tab  snp_list.csv  truth.tsv
test/data/test_chunks/: encoding.ped  read.ped
test/function_tests/: CMakeLists.txt  ginTests.h
test/integration/: testShake.cc
test/mock/model_selection/: mock_grid_cv.cc
test/mock/stats/: mock_univariate_association.cc
test/other/fastanova/: fastanova.cc
test/other/general/: main.cpp
test/other/scones/: scones.cc
test/unit/: CChi2Tests.cc
test/unit/association/: test_univariate_association.cc
test/unit/feature_selection/: test_scones.cc  test_shake.cc
test/unit/gwas/: test_CGWASData.cc
test/unit/io/: test_CPlinkParser.cc  test_grid_views.cc
test/unit/model_selection/: test_grid.cc  test_grid_cv.cc
test/unit/stats/: testCChi2.cc  test_CChi2.cc  test_univariate_association.cc
test/unit/utils/: test_CMatrixHelper.cc
test/unit_tests/: CChi2Tests.cc  CMakeLists.txt  runCChi2Tests
tests/: CMakeLists.txt
tests/function_tests/: CMakeLists.txt  ginTests.h
tests/scones2_tests/: CChi2Tests.cc  CMakeLists.txt  SCones2Test.cc  ginTests.cc  ginTests.h
tests/unit_tests/: CChi2Tests.cc  CMakeLists.txt
